# TD_3D

src/gpl3d/: CMakeLists.txt  README.md
src/gpl3d/include/gpl3d/: MakePlacer3d.h  Placer3d.h
src/gpl3d/src/: MakePlacer3d.cpp  odbStats.cpp  odbStats.h  placer3d.cpp  placer3d.i  placer3d.tcl  timing.cpp  tryodb.cpp  tryodb.h
src/gpl3d/src/Placer/: random.cpp
src/gpl3d/test/: simple_placer3d_solution.txt  superblue1_pnr.tcl  test.tcl  test_superblue1.tcl
src/par3d/: CMakeLists.txt
src/par3d/eplace/: CMakeLists.txt
src/par3d/eplace/FFT/: CMakeLists.txt  fft.cpp  fft.h  fft_test.cpp  fftsg3d.cpp
src/par3d/eplace/PlaceCommon/: objects.h
src/par3d/include/par3d/: MakePartitioner3d.h  partitioner3d.h
src/par3d/src/: Block.cpp  Block.h  EstimatePartitionParasitics.cpp  HierarchyTree.hpp  Hypergraph.hpp  MakePartitioner3d.cpp  Miscs.cpp  NetlistToBlock.cpp  NetlistToBlock.h  PartResult.cpp  PartResult.h  SACore.cpp  SACore.h  SequencePair.cpp  SequencePair.h  odbStats.cpp  odbStats.h  partitioner3d.cpp  partitioner3d.i  partitioner3d.tcl  staStats.cpp  staStats.h  timing.cpp  vcSpefWrite.cpp  vcmodel.h  writeVerilog.cpp  writeVerilog.h
src/par3d/src/test/: SATest.cpp
src/par3d/test/: superblue1.tcl  test.tcl
src/par3d/test/univista/: copy.sh  hidden1.tcl  hidden2.tcl  public1.tcl  public2.tcl  run_iccad.sh
src/par3d/test/univista/public1/: (me--genblk1_0__bp_cce_top--bp_cce)_glue_logic_0.cost.txt  (me--genblk1_0__bp_cce_top--bp_cce)_glue_logic_0.fp.txt.temp  (me--genblk1_0__bp_cce_top--bp_cce)_glue_logic_0.net.txt  (rof1_0__core--fe--icache_1)_glue_logic_1.cost.txt  (rof1_0__core--fe--icache_1)_glue_logic_1.fp.txt.temp  (rof1_0__core--fe--icache_1)_glue_logic_1.net.txt  flow.tcl  me--genblk1_0__bp_cce_top--bp_cce--pc_inst_ram.cost.txt  me--genblk1_0__bp_cce_top--bp_cce--pc_inst_ram.fp.txt.temp  public1.tcl  (+7 more)
(+8 files in other folders)
